--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.10'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE' //밑에 라이브러리 들이 원래는 버전이 있어야하는데 버전을 안넣어주면 스프링부트 2.7.10에서 사용하는 문제가없는 버전들이 자동으로 설정된다.
 }
 
 group = 'com.example'
@@ -19,7 +19,7 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //라이브러리는 의존성을 가진다. 데이터베이스 프로그램이 동작하기 위해서는 커넥션 툴이 생성되기 위한 어떤 설정 정보가 필요하다.
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
