--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/exampledb?useSSL=false&allowPublckeyRetrieval=true&serverTimezone=Asia/Seoul
     username: minhyung
-    password: 220211
+    password: 
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
